Add loaders for experience, skills, applications, and agenda; update HTML for time selection and links

--- a/resume/index.html
+++ b/resume/index.html
@@ -123,7 +123,7 @@
                             <span class="highlight__icon">🏢</span>
                             <div>
                                 <h4>SWIFT Experience</h4>
-                                <p>Financial Systems Expert</p>
+                                <p>FinTech Knowledge</p>
                             </div>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                             <a href="https://github.com/codesapienbe" target="_blank" class="social-link">
                                 <span>GitHub</span>
                             </a>
-                            <a href="https://linkedin.com/in/yilmazmustafa" target="_blank" class="social-link">
+                            <a href="https://linkedin.com/in/codesapienbe" target="_blank" class="social-link">
                                 <span>LinkedIn</span>
                             </a>
                         </div>
@@ -453,6 +453,19 @@
                             <!-- Add more dates as needed -->
                         </div>
                     </div>
+                    <div class="time-selector" style="margin-top: 1em;">
+                        <label for="timeSelect">Select Time:</label>
+                        <select id="timeSelect" class="form-control">
+                            <option value="">--Select a time--</option>
+                            <option value="09:00">09:00</option>
+                            <option value="10:00">10:00</option>
+                            <option value="11:00">11:00</option>
+                            <option value="13:00">13:00</option>
+                            <option value="14:00">14:00</option>
+                            <option value="15:00">15:00</option>
+                            <option value="16:00">16:00</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="agenda__list">
                     <h3>Applications Progress</h3>
@@ -563,7 +576,7 @@
                 </div>
                 <div class="footer__social">
                     <a href="https://github.com/codesapienbe" target="_blank" class="footer__link">GitHub</a>
-                    <a href="https://linkedin.com/in/yilmazmustafa" target="_blank" class="footer__link">LinkedIn</a>
+                    <a href="https://linkedin.com/in/codesapienbe" target="_blank" class="footer__link">LinkedIn</a>
                     <a href="mailto:ymus@tuta.io" class="footer__link">Email</a>
                 </div>
             </div>
