Refactor agenda handling by updating file paths and enhancing user interaction; remove deprecated agenda.json file and improve localization in HTML and translation files.

--- a/resume/index.html
+++ b/resume/index.html
@@ -80,8 +80,8 @@
                         </div>
                     </div>
                     <div class="hero__actions">
-                        <a href="#contact" class="btn btn--primary btn--lg">Get In Touch</a>
-                        <a href="#projects" class="btn btn--outline btn--lg">View Projects</a>
+                        <a href="#contact" class="btn btn--primary btn--lg" data-i18n-key="hero.getInTouch">Get In Touch</a>
+                        <a href="#projects" class="btn btn--outline btn--lg" data-i18n-key="hero.viewProjects">View Projects</a>
                     </div>
                 </div>
                 <div class="hero__image">
@@ -438,7 +438,7 @@
             <h2 class="section__title" data-i18n-key="section.agenda">Agenda</h2>
             <div class="agenda__grid">
                 <div class="agenda__calendar">
-                    <h3>Interview Availability</h3>
+                    <h3 data-i18n-key="agenda.calendarHeading">Interview Availability</h3>
                     <div class="calendar">
                         <div class="calendar__header">
                             <button class="calendar__prev">&lt;</button>
@@ -446,7 +446,7 @@
                             <button class="calendar__next">&gt;</button>
                         </div>
                         <div class="calendar__days">
-                            <div>Sun</div><div>Mon</div><div>Tue</div><div>Wed</div><div>Thu</div><div>Fri</div><div>Sat</div>
+                            <div data-i18n-key="calendar.day.sun">Sun</div><div data-i18n-key="calendar.day.mon">Mon</div><div data-i18n-key="calendar.day.tue">Tue</div><div data-i18n-key="calendar.day.wed">Wed</div><div data-i18n-key="calendar.day.thu">Thu</div><div data-i18n-key="calendar.day.fri">Fri</div><div data-i18n-key="calendar.day.sat">Sat</div>
                         </div>
                         <div class="calendar__dates">
                             <!-- Example dates, mark available and unavailable -->
@@ -479,10 +479,10 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>Company</th>
-                                <th>Position</th>
-                                <th>Date Applied</th>
-                                <th>Status</th>
+                                <th data-i18n-key="agenda.table.company">Company</th>
+                                <th data-i18n-key="agenda.table.position">Position</th>
+                                <th data-i18n-key="agenda.table.dateApplied">Date Applied</th>
+                                <th data-i18n-key="agenda.table.status">Status</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -518,31 +518,27 @@
             <h2 class="section__title" data-i18n-key="section.contact">Get In Touch</h2>
             <div class="contact__content">
                 <div class="contact__info">
-                    <h3>Let's Work Together</h3>
-                    <p>
-                        I'm always interested in new opportunities and challenges. 
-                        Whether you need help with enterprise Java applications, AI/ML solutions, 
-                        or full-stack development, I'd love to hear from you.
-                    </p>
+                    <h3 data-i18n-key="contact.introTitle">Let's Work Together</h3>
+                    <p data-i18n-key="contact.introText">I'm always interested in new opportunities and challenges. Whether you need help with enterprise Java applications, AI/ML solutions, or full-stack development, I'd love to hear from you.</p>
                     <div class="contact__details">
                         <div class="contact__item">
                             <span class="contact__icon">📧</span>
                             <div>
-                                <strong>Email</strong>
+                                <strong data-i18n-key="contact.detail.emailLabel">Email</strong>
                                 <a href="mailto:ymus@tuta.io">ymus@tuta.io</a>
                             </div>
                         </div>
                         <div class="contact__item">
                             <span class="contact__icon">📱</span>
                             <div>
-                                <strong>Phone</strong>
+                                <strong data-i18n-key="contact.detail.phoneLabel">Phone</strong>
                                 <a href="tel:+32467711709">+32 467 71 17 09</a>
                             </div>
                         </div>
                         <div class="contact__item">
                             <span class="contact__icon">📍</span>
                             <div>
-                                <strong>Location</strong>
+                                <strong data-i18n-key="contact.detail.locationLabel">Location</strong>
                                 <span>Zele, Belgium</span>
                             </div>
                         </div>
@@ -593,7 +589,7 @@
         <div class="container">
             <div class="footer__content">
                 <div class="footer__text">
-                    <p>&copy; 2025 Yilmaz Mustafa. All rights reserved.</p>
+                    <p data-i18n-key="footer.text">&copy; 2025 Yilmaz Mustafa. All rights reserved.</p>
                 </div>
                 <div class="footer__social">
                     <a href="https://github.com/codesapienbe" target="_blank" class="footer__link">GitHub</a>
