Enhance localization by translating elements without data-i18n-key in app.js; update index.html with SEO metadata, Open Graph, Twitter Card, and structured data for improved visibility and project descriptions.

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,6 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yilmaz Mustafa - Software Engineer</title>
     <meta name="description" content="Yilmaz Mustafa - Software Engineer specializing in Java, AI/ML, and Full-Stack development">
+    <link rel="canonical" href="https://codesapienbe.github.io/me/">
+    <meta name="keywords" content="Java, AI/ML, Machine Learning, Spring Boot, React, Full-Stack Development, Cybersecurity, Software Engineer, Portfolio">
+    <meta name="robots" content="index, follow">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Yilmaz Mustafa - Software Engineer">
+    <meta property="og:description" content="Software Engineer specializing in Java, AI/ML, and Full-Stack development.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://codesapienbe.github.io/me/">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/124777905?v=4">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Yilmaz Mustafa - Software Engineer">
+    <meta name="twitter:description" content="Software Engineer specializing in Java, AI/ML, and Full-Stack development.">
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/124777905?v=4">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Yilmaz Mustafa",
+      "url": "https://codesapienbe.github.io/me/",
+      "sameAs": [
+        "https://github.com/codesapienbe",
+        "https://linkedin.com/in/codesapienbe",
+        "mailto:ymus@tuta.io"
+      ],
+      "jobTitle": "Software Engineer",
+      "description": "Software Engineer specializing in Java, AI/ML, and Full-Stack development",
+      "email": "ymus@tuta.io",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Zele",
+        "addressCountry": "Belgium"
+      },
+      "knowsAbout": ["Java","Artificial Intelligence","Machine Learning","React","Spring Boot","Cybersecurity"]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "url": "https://codesapienbe.github.io/me/",
+      "name": "Yilmaz Mustafa - Software Engineer",
+      "description": "Personal portfolio website of Yilmaz Mustafa",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://codesapienbe.github.io/me/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -433,7 +484,246 @@
             <div class="projects__subcategory">
               <h3 class="section__subtitle" data-i18n-key="section.future">Future</h3>
               <div class="projects__grid">
-                <!-- Add future project cards here -->
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Smart Document Q&A System</h3>
+                    <p class="project-card__description">Upload PDFs, create embeddings, and ask questions about document content using RAG pattern. Virtual threads handle concurrent document processing efficiently.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21 (Virtual Threads)</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">Spring AI</span>
+                      <span class="tech-tag">React</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>Upload PDFs and create embeddings</li>
+                        <li>Question answering with RAG</li>
+                        <li>Concurrent processing via virtual threads</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Personal Knowledge Assistant</h3>
+                    <p class="project-card__description">Simple note-taking app with AI-powered search and summarization. Uses vector similarity search for finding related notes.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">LangChain4J</span>
+                      <span class="tech-tag">Vaadin</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>Note-taking with AI support</li>
+                        <li>Search and summarization</li>
+                        <li>Vector similarity search</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Code Review Assistant</h3>
+                    <p class="project-card__description">Analyze code snippets, provide suggestions, and maintain a knowledge base of coding patterns using embeddings.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21 (Virtual Threads)</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">Spring AI</span>
+                      <span class="tech-tag">React</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>Code snippet analysis</li>
+                        <li>AI-powered suggestions</li>
+                        <li>Knowledge base of patterns</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Smart Inventory Tracker</h3>
+                    <p class="project-card__description">Track inventory with AI-powered demand prediction based on historical data patterns.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">LangChain4J</span>
+                      <span class="tech-tag">Vaadin</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>Demand prediction</li>
+                        <li>CRUD operations</li>
+                        <li>Intelligent insights</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Meeting Minutes Analyzer</h3>
+                    <p class="project-card__description">Upload meeting transcripts, extract action items, and search through historical meetings using vector search.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21 (Virtual Threads)</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">Spring AI</span>
+                      <span class="tech-tag">Gluon</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>Transcript upload</li>
+                        <li>Action item extraction</li>
+                        <li>Historical search</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Customer Feedback Insights</h3>
+                    <p class="project-card__description">Collect customer feedback, categorize using AI, and provide a sentiment analysis dashboard.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">LangChain4J</span>
+                      <span class="tech-tag">React</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>Feedback collection</li>
+                        <li>AI categorization</li>
+                        <li>Sentiment dashboard</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Recipe Recommendation Engine</h3>
+                    <p class="project-card__description">Store recipes, find similar dishes using vector embeddings, and get cooking suggestions based on available ingredients.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21 (Virtual Threads)</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">Spring AI</span>
+                      <span class="tech-tag">Vaadin</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>Recipe storage</li>
+                        <li>Similarity search</li>
+                        <li>Ingredient-based suggestions</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Learning Path Generator</h3>
+                    <p class="project-card__description">Create personalized learning paths based on user goals and existing knowledge, using AI to recommend next steps.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">LangChain4J</span>
+                      <span class="tech-tag">React</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>Personalized paths</li>
+                        <li>AI recommendations</li>
+                        <li>Goal-based planning</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Travel Itinerary Planner</h3>
+                    <p class="project-card__description">Plan trips with AI-powered recommendations based on preferences and budget. Use vector search for similar destinations.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21 (Virtual Threads)</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">Spring AI</span>
+                      <span class="tech-tag">Gluon</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>AI travel suggestions</li>
+                        <li>Budget planning</li>
+                        <li>Destination similarity</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">API Documentation Assistant</h3>
+                    <p class="project-card__description">Generate and maintain API documentation with AI-powered examples and usage patterns.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">LangChain4J</span>
+                      <span class="tech-tag">Vaadin</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>AI documentation examples</li>
+                        <li>Usage pattern generation</li>
+                        <li>Maintained docs</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Code Snippet Manager</h3>
+                    <p class="project-card__description">Store and search code snippets using semantic search with embeddings. Tag and categorize snippets automatically.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21 (Virtual Threads)</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">Spring AI</span>
+                      <span class="tech-tag">React</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>Snippet storage</li>
+                        <li>Semantic search</li>
+                        <li>Auto tagging</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Project Idea Generator</h3>
+                    <p class="project-card__description">Generate project ideas based on tech stack preferences and skill level. Use vector similarity to find related project concepts.</p>
+                    <div class="project-card__tech">
+                      <span class="tech-tag">Java 21</span>
+                      <span class="tech-tag">Spring Boot</span>
+                      <span class="tech-tag">PostgreSQL (PGVector)</span>
+                      <span class="tech-tag">LangChain4J</span>
+                      <span class="tech-tag">Gluon</span>
+                    </div>
+                    <div class="project-card__features">
+                      <ul>
+                        <li>AI project ideas</li>
+                        <li>Preference-based suggestions</li>
+                        <li>Concept similarity</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
         </div>
